refactor(bot): 优化代码实现并修复字符串格式
- 使用 Math.clamp 方法替代 Math.max 和 Math.min 组合来限制数值范围
- 修复模型配置命令中的字符串格式，调整数字位置使显示更清晰